--- a/src/widgets/Blocks/ExperienceBlock/experienceBlock.module.css
+++ b/src/widgets/Blocks/ExperienceBlock/experienceBlock.module.css
@@ -1,7 +1,7 @@
 .container {
+	height: 100%;
 	color: var(--white-color);
 	display: grid;
-	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 115px 1fr;
 	gap: 12px;
 }
@@ -16,7 +16,6 @@
 }
 
 .experienceBlock {
-	min-height: 330px;
 	grid-column: 1/3;
 }
 
@@ -44,11 +43,12 @@
 	cursor: default;
 	display: flex;
 	flex-flow: row wrap;
-	gap: 12px;
+	column-gap: 12px;
 	margin-top: auto;
 }
 
 .tag {
+	margin-top: 14px;
 	opacity: 0.9;
 	display: flex;
 	flex-flow: row wrap;
@@ -69,8 +69,12 @@
 
 @media screen and (width <= 767px) {
 	.container {
-		display: flex;
-		flex-flow: column nowrap;
+		grid-template-rows: repeat(2, 115px) auto;
+		grid-template-columns: 1fr;
+	}
+
+	.experienceBlock {
+		grid-column: unset;
 	}
 
 	.block {
@@ -84,6 +88,7 @@
 	}
 
 	.tag {
+		margin-top: 6px;
 		gap: 6px;
 		padding: 4px 8px;
 		font-size: 12px;
